fix: avoid horizontal scrolling en mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -75,6 +75,8 @@ header.top {
   align-items: center;
   justify-content: center;
   list-style: none;
+  flex-wrap: wrap;
+  gap: .5rem 0;
 }
 
 .top nav li {
